--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,6 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
@@ -81,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanzheng Li"
-  avatar           : "profile.png"
+  avatar           : "photo.png"
   bio              : "University of Wisconsin-Madison 2020er majored in Computer Sciences and Economics"
   location         : "Madison, WI"
   employer         :
