--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          :  UA-167589185-1
 
 
 # Site Author
